Books and Card section is added

--- a/src/components/searchSection/searchSection.css
+++ b/src/components/searchSection/searchSection.css
@@ -4,6 +4,8 @@
     padding: 0px 10px;
     height: 50vh;
     align-items: center;
+    border-bottom: 2px solid #9B998F;
+    margin-bottom: 30px;
 }
 
 .s-left{
